fix firebase-auth caused angular error on ios

--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -45,6 +45,10 @@ html {
 	font-size: 100%;
 }
 
+body {
+	touch-action: manipulation;
+}
+
 .r-page {
 	min-height: 100vh;
 	overflow: hidden;
